--- a/Client/Pages/Pengajuan MPP/Create-Posisi.razor
+++ b/Client/Pages/Pengajuan MPP/Create-Posisi.razor
@@ -10,7 +10,7 @@
         <div class="page-title-box d-sm-flex align-items-center">
             <a href="/pengajuan-mpp" class="mb-sm-0 font-size-16 text-muted">Man Power Planning</a>
             <i class="bi bi-chevron-right text-primary mx-2" style="-webkit-text-stroke-width: 1px;"></i>
-            <a href="/pengajuan-mpp/input-mpp" class="mb-sm-0 font-size-16 text-muted">Input MPP</a>
+            <a class="mb-sm-0 font-size-16 text-muted">Input MPP</a>
             <i class="bi bi-chevron-right text-primary mx-2" style="-webkit-text-stroke-width: 1px;"></i>
             <h4 class="mb-sm-0 font-size-16">
                 @if (ApplicationState.MppChildForm != null && ApplicationState.MppChildForm.Pengajuan != "")
